# spider_toolsbox

./: .gitignore  .pre-commit-config.yaml  README.md  SpiderTools.py  __init__.py  cryptools.py  install_requirements.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  spider_tools.py  spidertools.py  test.py
Spider_ToolBox/: SpiderTools.py  __init__.py
cv2/: version.py
cv2/typing/: __init__.py
ddddocr/opencv-python/: PKG-INFO  setup.py
ddddocr/opencv-python/cv2/: version.py
ddddocr/opencv-python/opencv/cmake/: OpenCVUtils.cmake
ddddocr/opencv-python/opencv/data/haarcascades/: haarcascade_eye.xml  haarcascade_eye_tree_eyeglasses.xml  haarcascade_frontalcatface.xml  haarcascade_frontalcatface_extended.xml  haarcascade_frontalface_alt2.xml  haarcascade_frontalface_default.xml  haarcascade_fullbody.xml  haarcascade_lefteye_2splits.xml  haarcascade_lowerbody.xml  haarcascade_profileface.xml  haarcascade_righteye_2splits.xml  haarcascade_smile.xml  haarcascade_upperbody.xml
ddddocr/opencv-python/opencv/data/haarcascades_cuda/: haarcascade_eye.xml  haarcascade_eye_tree_eyeglasses.xml  haarcascade_frontalface_alt.xml  haarcascade_frontalface_alt2.xml  haarcascade_frontalface_default.xml  haarcascade_fullbody.xml  haarcascade_lefteye_2splits.xml  haarcascade_lowerbody.xml  haarcascade_profileface.xml  haarcascade_righteye_2splits.xml  haarcascade_smile.xml  haarcascade_upperbody.xml
ddddocr/opencv-python/opencv/data/lbpcascades/: lbpcascade_frontalcatface.xml  lbpcascade_frontalface_improved.xml
ddddocr/opencv-python/opencv/doc/: tutorial-utils.js
ddddocr/opencv-python/opencv/doc/js_tutorials/js_assets/: utils.js
ddddocr/opencv-python/opencv/doc/js_tutorials/js_assets/webnn-electron/: main.js  utils_webnn_electron.js
ddddocr/opencv-python/opencv/doc/pattern_tools/: gen_pattern.py  svgfig.py
ddddocr/opencv-python/opencv/doc/tools/: add_signatures.py
ddddocr/opencv-python/opencv/modules/gapi/doc/: 00-root.markdown
ddddocr/opencv-python/opencv/modules/java/generator/: gen_java.py
ddddocr/opencv-python/opencv/modules/js/generator/: embindgen.py  templates.py
ddddocr/opencv-python/opencv/modules/js/src/: helpers.js  make_umd.py
ddddocr/opencv-python/opencv/modules/js/test/: test_imgproc.js  test_mat.js  test_objdetect.js  test_photo.js  test_utils.js  test_video.js  tests.js
ddddocr/opencv-python/opencv/modules/objc/generator/: gen_objc.py
ddddocr/opencv-python/opencv/modules/python/package/cv2/: __init__.py
ddddocr/opencv-python/opencv/modules/python/src2/: copy_typings_stubs_on_success.py  gen2.py  hdr_parser.py
ddddocr/opencv-python/opencv/modules/python/test/: test_misc.py
ddddocr/opencv-python/opencv/samples/data/dnn/: classification_classes_ILSVRC2012.txt
ddddocr/opencv-python/opencv/samples/dnn/: README.md
ddddocr/opencv-python/opencv/samples/python/: find_obj.py  plane_tracker.py  qrcode.py  stitching.py
ddddocr/opencv-python/opencv_python.egg-info/: SOURCES.txt  requires.txt
spider_tools/: __init__.py  spider_tools.py
spider_tools/other/: __init__.py  other_tools.py
spidertools/: __init__.py  spider_tools.py
test/file_name/: test_name.py
tests/test_file_name/: test_name.py
tests/test_ocr/: test_ocrer.py
tests/test_request/: test_Request.py  test_create_request.py  test_req_models.py
tools/: Detail_README.md  README.md  __init__.py
tools/constants/: __init__.py  constants.py
tools/crypt/: __init__.py  cryptor.py
tools/cryptools/: cryptor.py
tools/docs/: README.md  install_requirements.sh
tools/download/: __init__.py  dowloader.py
tools/file/: __init__.py
tools/link_extractors/: html_response.py
tools/log/: __init__.py  logger.py
tools/ocr/: __init__.py  ocrer.py
tools/other/: __init__.py  other_tools.py
tools/other_tools/: __init__.py  create.py  name.py  other_tools.py
tools/parse/: __init__.py  html.py  json.py  regex.py
tools/request/: __init__.py  base_client.py  client.py  info.py  models.py
tools/utils/: __init__.py  date.py  file.py  html.py  number.py  page.py  text.py  url.py  xpath.py
tools/wapper/: __init__.py  wappers.py
(+19 files in other folders)
