[tool.poetry]
name = "spider-toolsbox"
version = "0.1.0"
description = ""
authors = ["ethan.huang <ethan.huang@rccchina.com.cn>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.10"
certifi = "=2024.7.4"
charset-normalizer = "=3.3.2"
colorama = "=0.4.6"
coloredlogs = "=15.0.1"
fake-useragent = "=1.5.1"
flatbuffers = "=24.3.25"
humanfriendly = "=10.0"
idna = "=3.7"
loguru = "=0.7.2"
lxml = "=5.2.2"
mpmath = "=1.3.0"
numpy = "=1.26.4"
onnxruntime = "=1.18.1"
opencv-python = "=4.10.0.84"
opencv-python-headless = "=4.10.0.84"
packaging = "=24.1"
pillow = "=10.4.0"
protobuf = "=5.27.2"
pycryptodome = "=3.20.0"
pyexecjs = "=1.5.1"
pyreadline3 = "=3.4.1"
requests = "=2.32.3"
six = "=1.16.0"
sympy = "=1.13.1"
urllib3 = "=2.2.2"
win32-setctime = "=1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
